<resources>
    <string name="app_name">Shush</string>
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="add_new_time">Add Shush Alarms</string>
    <string name="alarm_intent_boolean_extra_key">com.mdg.droiders.samagra.shush.ShouldShush</string>
    <string name="alarm_intent_long_extra_key">com.mdg.droiders.samagra.shush.TimeInMillis</string>
    <string name="alarm_intent_int_extra_key">com.mdg.droiders.samagra.shush.AlarmID</string>
</resources>
